Fixed avoid horizontal scrolling on mobile devices, fixed missing useEffect attribute

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 html, body {
     font-family: 'Roboto';
+    overflow-x: hidden;
 }
 
 p {
